@@ -175,16 +175,13 @@ Common.updates.progressDialogMessage=Updating \"{0}\" to version {1}
 
 # Tracking feature
 Common.tracking.description=\
-<html>\
 PhET is made freely available by grants that<br>\
 require us to collect a minimal amount of<br>\
-anonymous information to help document<br>\
+anonymous <a href="information">information</a> to help document<br>\
 the amount of use of PhET simulations<br>\
-and to better server our users' needs.\
-</html>
+and to better server our users' needs.
 Common.tracking.enabled=Allow sending of information to PhET
-Common.tracking.details.button=Details...
-Common.tracking.details.title=Details
+Common.tracking.details.title=Information
 Common.tracking.details.description=\
 <html>\
 The information shown below will be<br>\
